*BugFixes:
	- last introduced bug fixed in ReviewAccess

*Refactoring:
	- added refreshViews function to ViewControl
	- therefore applied changes in
		views.reviewexplorer.handler.ActivateReviewHandler
		views.reviewexplorer.handler.OpenCloseReviewHandler

*Visibility Changes:
	ExportReviewDataWizardPage:
		methods:
			getExportPath		public -> protected
			getTemplatePath		public -> protected
	NewReviewWizard:
		attributes:
			page1				none -> private
	NewReviewWizardPage
		methods:
			getReviewID			public -> protected
			getReviewReference	public -> protected
			getReviewResponsibility	public -> protected
			getReviewDescription public -> protected
	AnnotationParser
		attributes:
			tagRegex			protected -> private
			tagPattern			protected -> private
			idPositionMap		protected -> private
			idTagPositions		protected -> private
			displayedComments	protected -> private
			document			protected -> private
			editor				protected -> private
			annotationModel		protected -> private

*Deletions:
	ExportReviewDataWizardPage:
		methods:
			getSelectedReviewIDs
			
*Code optimizations:
	-> extract uses of classes implementing singleton-pattern as class attributes for better
		visibility according to documentation. This was done in:
			Class												(Variables)
			export.XSLExport									(ReviewAccess)
			wizards.export.ExportReviewDataWizardPage			(ReviewAccess)
			annotations.AgileAnnotationController				(PropertiesManager)
			annotations.AnnotationParser						(PropertiesManager)
			annotations.TagCleaner								(PropertiesManager)
			plugincontrol.RefreshHandler						(ReviewAccess)
			plugincontrol.ShowCommentHandler					(ReviewAccess)
			plugincontrol.CommentChooserDialog					(PropertiesManager)
			plugincontrol.DeleteCommentHandler					(ReviewAccess, PropertiesManager)
			dataaccess.ReviewAccess								(PropertiesManager)
			dataaccess.handler.CleanupHandler					(ReviewAccess)
			views.commenttable.CommentTableView					(ReviewAccess, PropertiesManager)