@@ -1,4 +1,4 @@
-package de.tukl.cs.softech.agilereview.dataaccess;
+package de.tukl.cs.softech.agilereview.dataaccess.handler;
 
 import java.io.IOException;
 
@@ -6,9 +6,9 @@ import org.eclipse.core.commands.AbstractHandler;
 import org.eclipse.core.commands.ExecutionEvent;
 import org.eclipse.core.commands.ExecutionException;
 
+import de.tukl.cs.softech.agilereview.dataaccess.ReviewAccess;
 import de.tukl.cs.softech.agilereview.tools.PluginLogger;
 import de.tukl.cs.softech.agilereview.views.ViewControl;
-import de.tukl.cs.softech.agilereview.views.commenttable.CommentTableView;
 
 /**
  * Handles save commands
@@ -23,15 +23,12 @@ public class SaveHandler extends AbstractHandler {
 	@Override
 	public Object execute(ExecutionEvent event) throws ExecutionException {
 		PluginLogger.log(this.getClass().toString(), "execute", "\"Save\" handler triggered");
-		if(ViewControl.isOpen(CommentTableView.class)) {
-			CommentTableView.getInstance().refreshTable();
-		}
 		try {
 			ReviewAccess.getInstance().save();
 		} catch (IOException e) {
 			PluginLogger.logError(this.getClass().toString(), "execute", "Error occured while saving comments", e);
 		}
+		ViewControl.refreshViews(ViewControl.COMMMENT_TABLE_VIEW);
 		return null;
 	}
-
 }
