@@ -23,7 +23,6 @@ import de.tukl.cs.softech.agilereview.tools.PluginLogger;
 import de.tukl.cs.softech.agilereview.tools.PropertiesManager;
 import de.tukl.cs.softech.agilereview.views.ViewControl;
 import de.tukl.cs.softech.agilereview.views.commenttable.CommentTableView;
-import de.tukl.cs.softech.agilereview.views.reviewexplorer.ReviewExplorer;
 
 /**
  * Delete the comment the editor is currently "in"
@@ -104,9 +103,7 @@ public class DeleteCommentHandler extends AbstractHandler {
 						PluginLogger.logError(this.getClass().toString(), "execute", "IOException occured while deleting a comment in ReviewAccess: "+c, e);
 					}
 					// Refresh the Review Explorer
-					if(ViewControl.isOpen(ReviewExplorer.class)) {
-						ReviewExplorer.getInstance().refresh();
-					}
+					ViewControl.refreshViews(ViewControl.REVIEW_EXPLORER);
 					
 					// XXX Detail view?
 				}
